--- a/devops-image/Dockerfile
+++ b/devops-image/Dockerfile
@@ -7,6 +7,10 @@ RUN apt-get update && apt-get install -y \
     git \
     nano \
     zsh \
+    sudo \
+    conntrack \
+    socat \
+    iptables \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
@@ -19,7 +23,7 @@ RUN install -m 0755 -d /etc/apt/keyrings \
     && apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin \
     && rm -rf /var/lib/apt/lists/*
 
-# Determine architecture and install Minikube
+# Install Minikube
 RUN ARCH=$(dpkg --print-architecture) && \
     if [ "$ARCH" = "amd64" ]; then \
     curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube_latest_amd64.deb; \
@@ -35,14 +39,17 @@ RUN ARCH=$(dpkg --print-architecture) && \
 RUN curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/$(dpkg --print-architecture)/kubectl" \
     && install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
 
-# Install Oh My Zsh
-RUN sh -c "$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
+# Install Oh My Zsh (Non-Interactive)
+RUN RUNZSH=no sh -c "$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
 
-# Set the working directory
-WORKDIR /app
+# Set non-root user
+RUN useradd -m -s /bin/zsh minikube-user && echo "minikube-user ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers
+USER minikube-user
+WORKDIR /home/minikube-user
 
-# Add a volume for persistent storage
-VOLUME ["/app/data"]
+# Ensure Minikube uses the host's Docker
+RUN mkdir -p ~/.minikube \
+    && echo '{ "driver": "docker" }' > ~/.minikube/config.json
 
-# Set the default shell to zsh
-SHELL ["/bin/zsh", "-c"]
+# Default command to start Minikube
+CMD ["minikube", "start", "--driver=docker"]
